--- a/.env
+++ b/.env
@@ -37,5 +37,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+
+MAILER_DSN=smtp://5d505ecc3b3408:********cfc9@sandbox.smtp.mailtrap.io:2525
+
 ###< symfony/mailer ###
