--- a/.env
+++ b/.env
@@ -38,6 +38,11 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 ###> symfony/mailer ###
 
-MAILER_DSN=smtp://5d505ecc3b3408:********cfc9@sandbox.smtp.mailtrap.io:2525
+MAILER_DSN=gmail://jlassiimariem52@gmail.com:rxajibngtlhtwdxn@default?verify_peer=0
 
 ###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
